2001-10-16  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_get_nb_width): fix for case where more
	than 2 non-breakable texts are in line, use get_next_nb_width
	(get_next_nb_width): new helper function

2001-10-16  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c: include <stdlib.h> for abs definition.

	* htmlengine.h: add allow_frameset boolean.

	* htmlengine.c (html_engine_init): add allow_frameset paramter.
	(parse_f): only parse the frameset and frames if allow_frameset is
	true.
	(parse_n): only discard the noframes body if allow_frameset is
	true.
	(html_engine_init): initialize allow_frameset.

	* htmltokenizer.c (add_byte): discard '\0' on input, it just
	confuses the rest of the tokenizer and serves no purpose.

2001-10-15  Radek Doulik  <rodo@ximian.com>

	* handle "font size points" attribute everywhere

	* gtkhtml-properties.h: added points attributes

	* gtkhtml.c (selection_received): automagic links when pasting
	text from selection

	* htmlclueflow.c (add_clear_area): new helper function
	(calc_size): use add_clear_area in case we need to erase area
	behind flow, which has just shrinked

	* htmlcluev.c (add_clear_area_behind): set width and height to
	HTMLObjectClearRectangle

	* htmlengine.c (clear_changed_area): use width and height from
	HTMLObjectClearRectangle

	* htmlobject.h: added width and height to HTMLObjectClearRectangle

2001-10-14  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (render_cur_frame): add hack to turn off alpha
	blending durring an animation.  Since gifs are the only animation
	type gdk-pixbuf supports it breaks nothing an makes for a big
	spead increase.

2001-10-14  Jon Trowbridge  <trow@ximian.com>

	* htmlframe.c (html_frame_init): On second thought, maybe sharing
	the tokenizers isn't such a good idea after all...

	* htmliframe.c (html_iframe_init): Ditto.

2001-10-13  Jon Trowbridge  <trow@ximian.com>

	* htmliframe.c (html_iframe_init): The iframe's HTMLEngine needs