@@ -1020,6 +1020,37 @@ html_table_set_cells_position (HTMLTable *table, HTMLPainter *painter)
 		}
 }
 
+static void
+add_to_changed (GList **changed_objs, HTMLObject *o)
+{
+	if (!changed_objs || (*changed_objs && (*changed_objs)->data == o))
+		return;
+	*changed_objs = g_list_prepend (*changed_objs, o);
+	/* printf ("changed HTMLClueFlow %p\n", o);
+	   gtk_html_debug_dump_tree_simple (o, 0); */
+}
+
+static void
+add_clear_area (GList **changed_objs, HTMLObject *o, gint x, gint w)
+{
+	HTMLObjectClearRectangle *cr;
+
+	if (!changed_objs)
+		return;
+
+	cr = g_new (HTMLObjectClearRectangle, 1);
+
+	cr->object = o;
+	cr->x = x;
+	cr->y = 0;
+	cr->width = w;
+	cr->height = o->ascent + o->descent;
+
+	*changed_objs = g_list_prepend (*changed_objs, cr);
+	/* NULL meens: clear rectangle follows */
+	*changed_objs = g_list_prepend (*changed_objs, NULL);
+}
+
 static gboolean
 calc_size (HTMLObject *o, HTMLPainter *painter, GList **changed_objs)
 {
@@ -1040,8 +1071,12 @@ calc_size (HTMLObject *o, HTMLPainter *painter, GList **changed_objs)
 	o->ascent = ROW_HEIGHT (table, table->totalRows) + pixel_size * table->border;
 	o->width  = COLUMN_OPT (table, table->totalCols) + pixel_size * table->border;
 	
-	if (o->width != old_width || o->ascent != old_ascent)
+	if (o->width != old_width || o->ascent != old_ascent) {
+		add_to_changed (changed_objs, o);
+		if (o->width < old_width)
+			add_clear_area (changed_objs, o, o->width, old_width - o->width);
 		return TRUE;
+	}
 
 	return FALSE;
 }
